hard-gists/e97d518fe02a79177b081c028a83ec1c/run.log
=== Docker Run Log for e97d518fe02a79177b081c028a83ec1c ===
Started at: Mi 29. Okt 20:48:35 CET 2025

[2025-10-29 20:48:35] START: Running container for e97d518fe02a79177b081c028a83ec1c
[2025-10-29 20:48:35] SUCCESS: Container 3d8fbc83acbf0f03e95c921cef79f2d4b8883fdfd85efdab7bad0fe185e87b2f started for e97d518fe02a79177b081c028a83ec1c
=== Container logs for e97d518fe02a79177b081c028a83ec1c ===
  File "/snippet.py", line 38
    print "test and training data loaded"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for e97d518fe02a79177b081c028a83ec1c ===
[2025-10-29 20:48:37] INFO: Container 3d8fbc83acbf0f03e95c921cef79f2d4b8883fdfd85efdab7bad0fe185e87b2f has stopped
